# intake-agent

./: .dockerignore  .gitignore  AHMED_APPROACH_RECORDING.md  BACKEND_INTEGRATION.md  CLOUD_RUN_DEPLOY.md  CLOUD_RUN_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DYNAMIC_CALLER_ID.md  Dockerfile  Dockerfile.agent  Dockerfile.intake-api  Dockerfile.worker  IMPLEMENTATION_FLOW.md  INTAKE_AGENT_API_PLAN.md  INTAKE_NOTES_GENERATION.md  INTAKE_TRANSCRIPTION_NOTES_API.md  INTEGRATION.md  LANGFUSE_INTEGRATION_PLAN.md  PHONE_NUMBER_RESEARCH.md  README.md  RECORDING_IMPLEMENTATION_GUIDE.md  TELNYX_RECORDING_DELETION_GUIDE.md  TELNYX_RECORDING_WEBHOOK_SOLUTION.md  TELNYX_WEBHOOK_SETUP_GUIDE.md  TRANSCRIPT_SAVE_APPROACHES.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
src/: api_client.py  api_server.py  calling_agent.py  db_utils.py  download_models.py  intake_api.py  make_call.py  predefined_templates.py  prompts.py  state.py  worker_server.py  worker_service.py
transcripts/: E2E(use for test).json  transcript_intake-049fab21_20251014_202513.json  transcript_intake-0faaf32e_20251022_163937.json  transcript_intake-244be6a4_20251014_194546.json  transcript_intake-36045d44_20251020_171252.json  transcript_intake-3ca69b59_20251022_180311.json  transcript_intake-5800d003_20251017_152422.json  transcript_intake-647d021b_20251014_204837.json  transcript_intake-65116d61_20251014_190712.json  transcript_intake-65bd3056_20251014_184020.json  transcript_intake-8719bccc_20251017_212130.json
zscribe_intake_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
